Number of axis for boxes and vehicles (#44)